<resources>
    <string name="app_name">SpyFall</string>
    <string name="spy">Spy</string>
    <string name="fall">Fall</string>

    <!--  Titles  -->
    <string name="titleWhatIs">What\'s</string>
    <string name="titleYourName">Your name?</string>
    <string name="titleHowTo">How to</string>
    <string name="titlePlay">Play</string>
    <string name="titleAbout">About</string>
    <string name="titleGame">Game</string>
    <string name="titleHelloThere">Hello There!</string>
    <string name="titleLocation">Location</string>
    <string name="titleMenu">Menu</string>
    <string name="titleIsTheLocation">Is the location</string>
    <string name="titleCorrectly">Correctly?</string>
    <string name="titlePlayerName">%s</string>
    <string name="titleWhoIs">Who\'s</string>
    <string name="titleTheSpy">The spy?</string>
    <string name="titleCall">Call</string>
    <string name="titleChooser">Share</string>

    <!--  Texts  -->
    <string name="textStartGame">To start the game or go to the menu, please enter your name</string>
    <string name="textHowToPlay">Quisque tincidunt bibendum imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu consequat quam, id auctor purus. Sed aliquet tempor sapien at ultrices. Pellentesque non porttitor magna. Nunc laoreet efficitur dolor, at tempor tellus ultricies nec. Sed ligula lorem, tempor vel risus sit amet, lacinia molestie odio.  Vivamus placerat justo at mauris consequat, sit amet consequat magna maximus. Cras faucibus ante ut libero posuere dictum.</string>
    <string name="textAboutGame">Praesent nisl sem, euismod id cursus eu, fringilla a nibh. Donec pellentesque elit nisl, nec tincidunt nulla dapibus in. Phasellus odio erat, finibus vel arcu quis, pharetra ultricies metus. Curabitur vitae nisl ac lectus vehicula ultrices. Etiam euismod lectus, in tempus.</string>
    <string name="textQuiteDialog">Do you really want to quit the game?</string>
    <string name="textPause">Pause</string>
    <string name="textInfoImageSwipe">"Swipe left to see the whole picture"</string>
    <string name="textWelcomeToTheGame">Welcome to the game</string>
    <string name="textWelcomeToTheGameWithId">Welcome to the game: %s</string>
    <string name="textPleaseWaitEveryone">Please wait until everyone joins</string>
    <string name="textPleaseWaitPlayers">Waiting for players</string>
    <string name="textCopyLink">Сopy the link and share it</string>
    <string name="textEnterGameId">Enter Game ID</string>
    <string name="textLocation">Please announces assumptions\nabout the location</string>
    <string name="textWaitLocation">Please wait until the spy\nsays location</string>
    <string name="textChooseThePerson">Choose the person you consider to be a spy</string>
    <string name="textInfoForJoin">You can press the play button for set status ready</string>
    <string name="textContinue">Continue</string>
    <string name="textCityWon">The city won</string>
    <string name="textSpyWon">The spy won</string>

    <!--  Buttons  -->
    <string name="buttonContinue">Continue</string>
    <string name="buttonCool">Cool, let\'s go</string>
    <string name="buttonGoOut">Go out</string>
    <string name="buttonVote">Vote</string>
    <string name="buttonLocation">Location</string>
    <string name="buttonCorrectly">Correctly</string>
    <string name="buttonNo">No</string>
    <string name="buttonPlayers">Players</string>
    <string name="buttonDuration">Card duration</string>
    <string name="buttonCardDuration">Card duration</string>
    <string name="buttonInvite">Invite players</string>
    <string name="buttonNextCard">Next card</string>
    <string name="buttonMainMenu">Main menu</string>
    <string name="buttonJoinGame">Join game</string>
    <string name="buttonCreateGame">Create game</string>
    <string name="buttonPlay">Play</string>

    <!--  ItemsMenu  -->
    <string name="menuCreateGame">Create game</string>
    <string name="menuAbout">About</string>
    <string name="menuRules">Rules</string>
    <string name="menuGoOut">Go out</string>

    <!--  Descriptions  -->
    <string name="description_open_drawer_layout">Open drawer layout</string>
    <string name="description_close_drawer_layout">Close drawer layout</string>
    <string name="description_location_image_view">Image location</string>

    <string name="measureOfTime">minutes</string>
    <string name="beach">Beach</string>
    <string name="supermarket">Supermarket</string>
    <string name="lighthouse">Lighthouse</string>
    <string name="office">Office</string>
    <string name="railwayCarriage">Railway carriage</string>
    <string name="noLimit">No limit</string>
    <string name="share">Share</string>
    <string name="invite">Invite you to play SpyFall to enjoy the game with us.</string>
    <string name="time">%d:%d</string>
    <string name="descriptionBack">Button back</string>
    <string name="descriptionMenu">Button menu</string>
</resources>