<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_vote_view" />

    <LinearLayout
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/menu" />

        <com.example.spyfall.ui.fragment.customview.OutlineTextView
            style="@style/Text.OutlineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/titleIsTheLocation" />

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCorrectly" />

        <TextView
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/textWaitLocation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCorrectly"
                style="@style/OutlineButton"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/buttonCorrectly"
                android:textAppearance="@style/OutlineButtonText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNo"
                style="@style/OutlineButton"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/buttonNo"
                android:textAppearance="@style/OutlineButtonText" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>