<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_start_view" />

    <LinearLayout
        style="@style/PaddingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/descriptionMenu"
            android:src="@drawable/menu" />

        <com.example.spyfall.ui.customview.OutlineTextView
            style="@style/Text.OutlineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:text="@string/titleWhatIs" />

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleYourName" />


        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:height="60dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <TextView
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/textStartGame" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmButton"
            style="@style/FillButton"
            android:layout_width="match_parent"
            android:layout_marginTop="28dp"
            android:text="@string/buttonPlay"
            android:textAppearance="@style/FillButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</FrameLayout>