<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_info_view" />

    <LinearLayout
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/menu" />

        </FrameLayout>


        <com.example.spyfall.ui.screen.customview.OutlineTextView
            style="@style/Text.OutlineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/titleHowTo" />

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlePlay" />

        <TextView
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:text="@string/textHowToPlay" />

        <Button
            android:id="@+id/buttonCool"
            style="@style/FillButton"
            android:textAppearance="@style/FillButtonText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_button"
            android:text="@string/buttonCool" />

    </LinearLayout>

</FrameLayout>