<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_start_game_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="36dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/menu" />

        </FrameLayout>

        <TextView
            android:id="@+id/nameTextView"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:paddingStart="20dp"
            android:text="@string/titlePlayerName" />

        <TextView
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/textWelcomeToTheGame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCreateGame"
                style="@style/OutlineButton"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/buttonCreateGame"
                android:textAppearance="@style/OutlineButtonText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonJoinGame"
                style="@style/OutlineButton"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/buttonJoinGame"
                android:textAppearance="@style/OutlineButtonText" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/startGameContainerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            />
    </LinearLayout>

</FrameLayout>
