<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_start_game_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="36dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/menu" />

        </FrameLayout>

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:paddingStart="20dp"
            android:text="@string/titlePlayerName" />

        <TextView
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/textWelcomeToTheGameWithId" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <com.google.android.material.button.MaterialButton
                app:backgroundTint="@null"
                style="@style/OutlineButton"
                android:id="@+id/buttonPlayers"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                app:icon="@drawable/player"
                app:iconGravity="textStart"
                app:iconTint="@drawable/icon_tint"
                android:layout_weight="1"
                android:text="@string/buttonPlayers"
                android:textColor="@drawable/color_text_outline_button" />

            <com.google.android.material.button.MaterialButton
                app:backgroundTint="@null"
                style="@style/OutlineButton"
                android:id="@+id/buttonCardDuration"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:icon="@drawable/time"
                app:iconGravity="textStart"
                app:iconTint="@drawable/icon_tint"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/buttonCardDuration"
                android:textColor="@drawable/color_text_outline_button" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/startGameContainerView"
            android:name="com.example.spyfall.ui.screen.view.InvitePlayerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>
