<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background_fragment"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="20dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/inviteButton"
        style="@style/Text.Item"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/lightGray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/buttonInvite"
        app:cornerRadius="8dp"
        app:icon="@drawable/plus"
        app:iconGravity="textStart"
        app:iconTint="@color/darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.button.MaterialButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playersRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteButton"
        tools:itemCount="8"
        tools:listitem="@layout/item_recyclerview_player">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/textPleaseWaitEveryone"
        android:textAppearance="@style/Text.AccentedText"
        app:layout_constraintBottom_toTopOf="@+id/dottedHorizontalProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.spyfall.ui.customview.DottedHorizontalProgressBar
        android:id="@+id/dottedHorizontalProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:color="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxDotRadius="5px"
        app:minDotRadius="3px"
        tools:layout_editor_absoluteY="629dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlay"
        style="@style/FillButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/buttonPlay"
        android:textAppearance="@style/FillButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>